infrastructure/security-group.tf
# Public Security Group
resource "aws_security_group" "pc_public_sg" {
  name        = "pc_public_sg"
  description = "Used for the elastic load balancer for public access"
  vpc_id      = aws_vpc.pc_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
